syntax = "proto2";

message IncubatorOpenEventMessage {
    required bool isOpened = 2;
}
